tests/expectations/compiler/const_generics/loop_var_array_size_oob_fail.out
Error [ESAZ0374010]: Array index 0 out of bounds (array length is 0).
    --> compiler-test:10:16
     |
  10 |         sum += arr[0u32];
     |                ^^^^^^^^^
